# AgentBusters-Leaderboard

./: .env.example  .gitignore  CIO-AGENT-ARCHITECTURE.md  Dockerfile  Dockerfile.green  Dockerfile.mcp-edgar  Dockerfile.mcp-sandbox  Dockerfile.mcp-yahoo  Dockerfile.purple  README.md  docker-compose.yml  generate_compose.py  leaderboard.json  pyproject.toml  scenario.toml
config/: eval_all.yaml  eval_config.yaml  eval_crypto.yaml  eval_crypto_production.yaml  eval_full.yaml  eval_gdpval.yaml  eval_quick.yaml  eval_with_robustness.yaml  multi_dataset_eval.yaml
docs/: ARCHITECTURE_OPTIONS.md  CRYPTO_BENCHMARK.md  DEPLOYMENT.md  EXECUTION_FRAMEWORK.md  JUDGE_EVALUATION.md  OPTIONS_TRADING_REQUIREMENTS.md
paper/: agentbusters.tex
results/: 00a492d9-8ccc-412e-ab03-302d856cced7.json  124fb82a-a90b-42f8-b314-d157902be538.json  1307e0f9-bb82-446b-b900-d4078170bd26.json  2334a373-115e-4e85-93bc-3d6f7be01606.json  408ce8e6-1495-4ff9-b7d8-45f2e0c58775.json  6721819e-0db6-4318-9050-a9ba6b42eaad.json  95a4c1c9-35fc-4133-8109-21cb9bd92891.json  cd83d5d6-8ab9-4d51-8126-798d0c89fd95.json  csv_results.json  eval_debate.json  eval_output.json  eval_output_debate.json  full_results.json  silviax123-20260201-074412.json  yxc20089-20260116-052258.json  yxc20089-20260116-053418.json  yxc20089-20260116-053920.json  yxc20089-20260116-054143.json  yxc20089-20260116-054542.json  yxc20089-20260116-055455.json  yxc20089-20260116-061210.json  yxc20089-20260116-065415.json  yxc20089-20260116-070945.json  yxc20089-20260116-071612.json  yxc20089-20260116-082817.json  yxc20089-20260116-083543.json  yxc20089-20260116-091543.json  yxc20089-20260131-054406.json  yxc20089-20260131-061903.json  yxc20089-20260131-063820.json  yxc20089-20260131-064929.json  yxc20089-20260131-065414.json  yxc20089-20260131-070443.json  yxc20089-20260131-071405.json  yxc20089-20260131-152804.json  yxc20089-20260131-154253.json  yxc20089-20260131-171030.json  yxc20089-20260131-171943.json  yxc20089-20260131-175208.json  yxc20089-20260131-181202.json  (+15 more)
scripts/: run_a2a_eval.py  run_bizfin_simple.py  (+5 more)
(+147 files in other folders)
