[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cio-agent"
version = "1.0.0"
description = "FAB++ Dynamic Finance Agent Benchmark - CIO-Agent Evaluator for AgentBeats Competition"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AgentBusters Team"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.12.5",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "yfinance>=0.2.30",
    "edgartools>=2.0.0",
    "sentence-transformers>=2.2.0",
    "asyncio>=3.4.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    # A2A Protocol Support (updated for AgentBeats compatibility)
    "a2a-sdk[http-server,sql]>=0.3.20",
    "fastapi>=0.100.0",
    "uvicorn>=0.38.0",
    "aiosqlite>=0.19.0",
    # MCP Protocol Support
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
cio-agent = "cio_agent.cli:app"
purple-agent = "purple_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
